<resources>
    <string name="app_name">Movie Apps</string>
    <string name="image_preview">Image Priview</string>
    <string name="image_preview_darker">image Darker Priview</string>
    <string name="description">Overview</string>
    <string name="overview">Di dunia lain, ninja adalah kekuatan tertinggi, dan di Desa Tersembunyi di Daun hiduplah ninja paling sembunyi-sembunyi di negeri itu. Dua belas tahun sebelumnya, Rubah Ekor Sembilan yang menakutkan meneror desa dan merenggut banyak nyawa sebelum ditundukkan dan rohnya disegel di dalam tubuh bayi laki-laki. Anak laki-laki itu, Naruto Uzumaki, telah tumbuh menjadi seorang ninja-in-training yang lebih tertarik pada lelucon daripada mempelajari ninjutsu .. tapi Naruto bertekad untuk menjadi ninja terhebat yang pernah ada!</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
</resources>